[bumpversion]
current_version = 2.0.5
commit = True
tag = True

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:greenlight/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 1

[flake8]
# Some commonly ignores
#   E203 is broken and it is recommended to ignored it
#   F401 Unused import
#   W503 Line break occurred before a binary operator
#   E501 Line too long (82 > 79 characters)
#   E266 Too many leading '#' for block comment
#   F403 from module import *
#   C901 Function is too complex
ignore = E203, E266, E501, W503,
max-line-length = 120
# ignore __init__.py because it imports all modules without using it
exclude =
    __init__.py
    docs
    notebooks

[options]
packages = find:

[options.packages.find]
include = greenlight*
